mengubah gambar dan about me

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         </div>
         <div class="row justify-content-center">
           <div class="col col-md-6 col-sm-9 col-10 text-center fs-5">
-            <p>Saya merupakan exp laner terkuat season 23. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi voluptatum aperiam at ex nobis magni cupiditate amet velit cum unde.</p>
+            <p>Saya masih dalam proses pembelajaran menjadi seorang web developer yang baik dan tidak sombong, dan tentunya ingin mencapai tahap profesional.</p>
           </div>
           <div class="col col-md-6 col-sm-9 col-10 text-center fs-5">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et magni porro optio, vero blanditiis, iure minus quis doloremque at, voluptates tempore quos veritatis! Numquam perspiciatis reprehenderit libero voluptatem!</p>
+            <p>untuk materi dan sumber pembelajaran saya menjadi web developer,saya belajar otodidak melalui internet khususnya di youtube.tak jarang teman" programmer saya juga sering mengarahkan dalam proses belajar.</p>
           </div>
         </div>
       </div>
@@ -104,41 +104,41 @@
         <div class="row justify-content-center">
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
             <div class="card">
-              <img src="img/umberto-QJuzFcO-p3A-unsplash.jpg" class="card-img-top" alt="..." />
+              <img src="img/wedding.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Belajar membuat undangan pernikahan online yang bisa saya pakai sendiri kelak ketika akan menikah.Meskipun belum ketemu jodohnya :-(</p>
               </div>
             </div>
           </div>
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
             <div class="card">
-              <img src="img/umberto-QJuzFcO-p3A-unsplash.jpg" class="card-img-top" alt="..." />
+              <img src="img/beras.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Membuat landingpages sederhana tentang beberapa jenis berkualitas. meskipun jauh dari sempurna saya tetap senang karena ini adalah karya saya sendiri.</p>
               </div>
             </div>
           </div>
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
             <div class="card">
-              <img src="img/umberto-QJuzFcO-p3A-unsplash.jpg" class="card-img-top" alt="..." />
+              <img src="img/webkambing.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Membuat website tentang peternakan kambing. kebetulan yang ini saya mengguanakan template dan dibantu oleh senior saya yang kita sebut hokage.</p>
               </div>
             </div>
           </div>
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
             <div class="card">
-              <img src="img/umberto-QJuzFcO-p3A-unsplash.jpg" class="card-img-top" alt="..." />
+              <img src="img/wpu.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Sumber belajar saya dari 0 samapi satu adalah Web Programming Unpas.jgn lupa subbrek channelnya ya gaess.</p>
               </div>
             </div>
           </div>
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
             <div class="card">
-              <img src="img/umberto-QJuzFcO-p3A-unsplash.jpg" class="card-img-top" alt="..." />
+              <img src="img/friends.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Dan tak lupa terima kasih kepada teman" saya yang membantu proses belajar saya dan selalu men support saya.</p>
               </div>
             </div>
           </div>
@@ -176,7 +176,7 @@
                 <textarea class="form-control" id="Pesan" rows="3"></textarea>
               </div>
 
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-warning">Kirim</button>
             </form>
           </div>
         </div>
