--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
         </div>
         <div class="row justify-content-center">
           <div class="col col-md-7 col-sm-10 col-10">
+            <div class="alert alert-primary alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Terima kasih!</strong> Pesan anda sudah kami terima!
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
             <form name="contact-form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama lengkap</label>
@@ -176,7 +180,11 @@
                 <textarea class="form-control" id="Pesan" rows="3" name="pesan"></textarea>
               </div>
 
-              <button type="submit" class="btn btn-warning">Kirim</button>
+              <button type="submit" class="btn btn-warning btn-kirim">Kirim</button>
+              <button class="btn btn-warning btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                <span role="status">Loading...</span>
+              </button>
             </form>
           </div>
         </div>
@@ -199,7 +207,7 @@
 
     <!-- script auto close -->
 
-    <script>
+    <!-- <script>
       var offcanvasElement = document.getElementById("offcanvasNavbar");
       var offcanvas = new bootstrap.Offcanvas(offcanvasElement);
 
@@ -230,7 +238,7 @@
           offcanvas.hide(); // Menutup offcanvas
         });
       });
-    </script>
+    </script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
@@ -269,11 +277,27 @@
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbxclN0wJy9dKDZdDc3Iwh8IcccInuCznTor3nT2-rCBCLkYYUNbWICH_tak88ca6DoT/exec";
       const form = document.forms["contact-form"];
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
 
       form.addEventListener("submit", (e) => {
         e.preventDefault();
+        // ketika tombol kirim di klik
+        // tampilkan tombol loading,hilangkan tombol kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
         fetch(scriptURL, { method: "POST", body: new FormData(form) })
-          .then((response) => console.log("Success!", response))
+          // tampilkan tombol kirim,hilangkan tombol loading
+          .then((response) => {
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            // tampilkan alert
+            myAlert.classList.toggle("d-none");
+            // reset form
+            form.reset();
+            console.log("Success!", response);
+          })
           .catch((error) => console.error("Error!", error.message));
       });
     </script>
