--- a/index.html
+++ b/index.html
@@ -9,27 +9,12 @@
     <link rel="stylesheet" href="style.css" />
     <!-- bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+    <!-- data AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- faveicon -->
+    <link rel="shortcut icon" href="img/logo-pp-removebg-preview.png" type="image/x-icon" />
   </head>
   <body id="home">
-    <!-- navbar start -->
-    <!-- <nav class="navbar navbar-expand-md bg-warning navbar-dark shadow sticky-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">KAMAL</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link active" aria-current="page" href="#about">About Me</a>
-            <a class="nav-link active" aria-current="page" href="#project">Project</a>
-            <a class="nav-link active" aria-current="page" href="#contact">Contact Me</a>
-          </div>
-        </div>
-      </div>
-    </nav> -->
-    <!-- navbar end -->
-
     <!-- offcanvas -->
     <nav class="navbar navbar-expand-sm sticky-top mynavbar shadow" style="background-color: #ef910f">
       <div class="container-fluid">
@@ -59,8 +44,8 @@
 
     <!-- jumbotron start -->
     <section class="jumbotron text-center pt-5">
-      <img src="img/yujong_png - Copy.png" alt="yujong" width="200px" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 pt-3">M. Yujong</h1>
+      <img src="img/yujong_png - Copy.png" data-aos="fade-down" data-aos-duration="1000" alt="yujong" width="200px" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4 pt-3" data-aos="fade-up" data-aos-duration="1400">M. Yujong</h1>
       <p class="lead">Exp laner | Fighter,busrt damage | Y-tim</p>
     </section>
     <!-- jumbotron end -->
@@ -78,10 +63,12 @@
         </div>
         <div class="row justify-content-center">
           <div class="col col-md-6 col-sm-9 col-10 text-center fs-5">
-            <p>Saya masih dalam proses pembelajaran menjadi seorang web developer yang baik dan tidak sombong, dan tentunya ingin mencapai tahap profesional.</p>
+            <p data-aos="fade-right" data-aos-duration="1000">Saya masih dalam proses pembelajaran menjadi seorang web developer yang baik dan tidak sombong, dan tentunya ingin mencapai tahap profesional.</p>
           </div>
           <div class="col col-md-6 col-sm-9 col-10 text-center fs-5">
-            <p>untuk materi dan sumber pembelajaran saya menjadi web developer,saya belajar otodidak melalui internet khususnya di youtube.tak jarang teman" programmer saya juga sering mengarahkan dalam proses belajar.</p>
+            <p data-aos="fade-left" data-aos-duration="1000">
+              untuk materi dan sumber pembelajaran saya menjadi web developer,saya belajar otodidak melalui internet khususnya di youtube.tak jarang teman" programmer saya juga sering mengarahkan dalam proses belajar.
+            </p>
           </div>
         </div>
       </div>
@@ -99,44 +86,44 @@
     <section id="project" style="background-color: #fed192">
       <div class="row justify-content-center">
         <div class="col text-center">
-          <h1>My project</h1>
+          <h1 data-aos="fade-down" data-aos-duration="1000">My project</h1>
         </div>
         <div class="row justify-content-center">
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
-            <div class="card">
-              <img src="img/wedding.png" class="card-img-top" alt="..." />
+            <div class="card" data-aos="fade-up" data-aos-duration="1000">
+              <img src="img/wedding.png" class="card-img-top" alt="wedding.png" title="wedding.png" />
               <div class="card-body">
                 <p class="card-text">Belajar membuat undangan pernikahan online yang bisa saya pakai sendiri kelak ketika akan menikah.Meskipun belum ketemu jodohnya :-(</p>
               </div>
             </div>
           </div>
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
-            <div class="card">
-              <img src="img/beras.png" class="card-img-top" alt="..." />
+            <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+              <img src="img/beras.png" class="card-img-top" alt="beras.png" title="berass.png" />
               <div class="card-body">
                 <p class="card-text">Membuat landingpages sederhana tentang beberapa jenis berkualitas. meskipun jauh dari sempurna saya tetap senang karena ini adalah karya saya sendiri.</p>
               </div>
             </div>
           </div>
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
-            <div class="card">
-              <img src="img/webkambing.png" class="card-img-top" alt="..." />
+            <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+              <img src="img/webkambing.png" class="card-img-top" alt="kambing.png" title="kambing.png" />
               <div class="card-body">
                 <p class="card-text">Membuat website tentang peternakan kambing. kebetulan yang ini saya mengguanakan template dan dibantu oleh senior saya yang kita sebut hokage.</p>
               </div>
             </div>
           </div>
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
-            <div class="card">
-              <img src="img/wpu.png" class="card-img-top" alt="..." />
+            <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+              <img src="img/wpu.png" class="card-img-top" alt="wpu.png" title="wpu.png" />
               <div class="card-body">
                 <p class="card-text">Sumber belajar saya dari 0 samapi satu adalah Web Programming Unpas.jgn lupa subbrek channelnya ya gaess.</p>
               </div>
             </div>
           </div>
           <div class="col col-md-4 col-sm-6 col-10 mt-4 pb-2 text-center">
-            <div class="card">
-              <img src="img/friends.jpg" class="card-img-top" alt="..." />
+            <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+              <img src="img/friends.jpg" class="card-img-top" alt="friends.png" title="friends.png" />
               <div class="card-body">
                 <p class="card-text">Dan tak lupa terima kasih kepada teman" saya yang membantu proses belajar saya dan selalu men support saya.</p>
               </div>
@@ -299,6 +286,14 @@
             console.log("Success!", response);
           })
           .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
+
+    <!-- data AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
       });
     </script>
   </body>
