--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <!-- jumbotron start -->
     <section class="jumbotron text-center pt-5">
-      <img src="img/yujong_png - Copy.png" data-aos="fade-down" data-aos-duration="1000" alt="yujong" width="200px" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 pt-3" data-aos="fade-up" data-aos-duration="1400">M. Yujong</h1>
-      <p class="lead">Exp laner | Fighter,busrt damage | Y-tim</p>
+      <img src="img/yujong_png - Copy.png" alt="yujong" width="200px" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4 pt-3">M. Yujong</h1>
+      <p class="lead"></p>
     </section>
     <!-- jumbotron end -->
 
@@ -194,39 +194,6 @@
 
     <!-- script auto close -->
 
-    <!-- <script>
-      var offcanvasElement = document.getElementById("offcanvasNavbar");
-      var offcanvas = new bootstrap.Offcanvas(offcanvasElement);
-
-      // Ambil semua link di dalam offcanvas menu
-      var home = offcanvasElement.querySelectorAll("a");
-      var about = offcanvasElement.querySelectorAll("a");
-      var project = offcanvasElement.querySelectorAll("a");
-      var contact = offcanvasElement.querySelectorAll("a");
-
-      // Tambahkan event listener untuk menutup offcanvas ketika link diklik
-      home.forEach(function (home) {
-        home.addEventListener("click", function () {
-          offcanvas.hide(); // Menutup offcanvas
-        });
-      });
-      about.forEach(function (about) {
-        about.addEventListener("click", function () {
-          offcanvas.hide(); // Menutup offcanvas
-        });
-      });
-      project.forEach(function (project) {
-        project.addEventListener("click", function () {
-          offcanvas.hide(); // Menutup offcanvas
-        });
-      });
-      contact.forEach(function (contact) {
-        contact.addEventListener("click", function () {
-          offcanvas.hide(); // Menutup offcanvas
-        });
-      });
-    </script> -->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     <script>
@@ -291,10 +258,21 @@
 
     <!-- data AOS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- gsap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", { duration: 2, delay: 1, text: "Exp laner | Fighter busrt damage | Y-tim" });
+      gsap.from(".jumbotron img", { duration: 1, y: -100, opacity: 0, ease: "bounce" });
+      gsap.from(".display-4", { duration: 1, x: -50, opacity: 0, delay: 0.2, ease: "back" });
+    </script>
     <script>
       AOS.init({
         once: true,
       });
     </script>
+    <!-- tilt.js -->
+    <script type="text/javascript" src="vanilla-tilt.min.js"></script>
   </body>
 </html>
